src/test/deca/context/invalid/logic/float-compare-to-bool.deca
// Programme testant un float supérieur à un booléen

{
    if (2.7 < true) {}
}